--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ nav ul li a{
 width: 100%;
 top:30px;
 height:550px;
-background-image: url("../assets/showcase-headphone-tablet.jpg");
+background-image: url("./assets/showcase-headphone-tablet.jpg");
 background-position:bottom;
 background-repeat: no-repeat;
 background-size: cover;
@@ -258,7 +258,7 @@ margin-top: 5px;
     width: 45%;
     height:100%;
     border-radius:10px;
-    background-image: url("../assets/ear-ring-desktop.jpg");
+    background-image: url("./assets/ear-ring-desktop.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -269,7 +269,7 @@ margin-top: 5px;
     width: 45%;
     height:100%;
     border-radius:10px;
-    background-image: url("../assets/boy-image.jpg");
+    background-image: url("./assets/boy-image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
